# trans-trans

./: .gitignore
trans-trans-core/: Cargo.toml
trans-trans-core/src/: fs.rs  lib.rs  signal.rs  state.rs
trans-trans-linux/: Cargo.toml
trans-trans-linux/src/: fs.rs  main.rs
trans-trans-linux/src/audio/: mod.rs
trans-trans-linux/src/input/: mod.rs  tui.rs
xrni-extract/: Cargo.toml
xrni-extract/src/: main.rs
