[package]
name = "trans-trans-linux"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.25.0"
color-eyre = "0.6.5"
cpal = "0.17.1"
crossterm = { version = "0.29.0", features = ["event-stream"] }
embedded-io = "0.7.1"
embedded-io-adapters = { version = "0.7.0", features = ["std"] }
env_logger = "0.11.9"
futures = "0.3.32"
futures-timer = "3.0.3"
heapless = "0.9.2"
log = "0.4.29"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
ttcore = { path = "../trans-trans-core", package = "trans-trans-core" }
tinyrand = "0.5.0"
midir = { version = "0.10.3", features = ["jack"] }
midly = "0.5.3"
