[package]
name = "xrni-extract"
version = "0.1.0"
edition = "2024"

[dependencies]
claxon = "0.4.3"
hound = "3.5.1"
quick-xml = "0.38.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_arrays = "0.2.0"
serde_json = "1.0.145"
ttcore = { path = "../trans-trans-core", package = "trans-trans-core" }
zip = "5.1.1"
